add debug endpoint
